implement crud for movies
